--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -13,7 +13,7 @@ body {
     -webkit-tap-highlight-color: #0085A1;
 }
 .intro-header .page-heading .subheading, .intro-header .post-heading .subheading, .intro-header .site-heading .subheading, .navbar-custom, h1, h2, h3, h4, h5, h6 {
-    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family:Avenir Light, 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 p {
     line-height: 1.5;
@@ -23,7 +23,7 @@ p a {
     text-decoration: underline;
 }
 a:focus, a:hover {
-    color: #0085A1;
+    color: #d55e5f;
 }
 a img:focus, a img:hover {
     cursor: zoom-in;
@@ -66,14 +66,14 @@ hr.small {
     padding: 20px;
 }
 .navbar-custom .navbar-brand:focus, .navbar-custom .navbar-brand:hover {
-    color: rgba(255, 255, 255, .8);
+    color: #d55e5f;
 }
 .navbar-custom .nav li a {
     color: #fff;
     padding: 20px;
 }
 .navbar-custom .nav li a:focus, .navbar-custom .nav li a:hover {
-    color: rgba(255, 255, 255, .8);
+    color: #d55e5f;
 }
 }@media only screen and (min-width:1170px) {
     .navbar-custom {
@@ -101,13 +101,13 @@ hr.small {
     color: #333;
 }
 .navbar-custom.is-fixed .navbar-brand:focus, .navbar-custom.is-fixed .navbar-brand:hover {
-    color: #0085A1;
+    color: #d55e5f;
 }
 .navbar-custom.is-fixed .nav li a {
     color: #333;
 }
 .navbar-custom.is-fixed .nav li a:focus, .navbar-custom.is-fixed .nav li a:hover {
-    color: #0085A1;
+    color: #d55e5f;
 }
 .navbar-custom.is-visible {
     -webkit-transform: translate3d(0, 100%, 0);
@@ -398,11 +398,14 @@ animation-direction: alternate;
     text-align: center;
     margin: 30px;
 }
-.aboutbox{
+.aboutbox1, .aboutbox2{
    -webkit-box-shadow: 0px 0px 39px -4px rgba(0,0,0,0.75);
    -moz-box-shadow: 0px 0px 39px -4px rgba(0,0,0,0.75);
    box-shadow: 0px 0px 39px -4px rgba(0,0,0,0.75);
  rgba(250,250,250,1);
+}
+.aboutbox1{
+    color: #d55e5f;
 }
 #abouticon{
     height: 30px;
@@ -417,7 +420,26 @@ animation-direction: alternate;
     text-align: center;
 
 }
-
+.abouthead{
+    text-align: left;
+    margin-top: 1.5em;
+    color: #d55e5f;
+    font-size: 1.6em;
+    font-family: Avenir light;
+}
+.contact-info{
+    margin: 0.5em;
+    color: #343434;
+    text-align: center;
+    font-size: 0.8em;
+    font-family: Helvetica Light;
+}
+h1:hover{
+    color: #d55e5f;
+}
+.subheading:hover{
+    color: #d55e5f;
+}
 /*
 .gallery{
   margin-bottom: 7px;
