--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -394,29 +394,27 @@ animation-direction: alternate;
     animation-duration: 0s;
 }
 #sizes{
+    font-size: 0.9em;
     display: inline;
     text-align: center;
-    margin: 30px;
-    color: #d55e5f;
+    margin-left: 0.5em;
+    margin-right: 0.5em;
+    color: white;
 }
-.aboutbox1, .aboutbox2{
-   -webkit-box-shadow: 0px 0px 39px -4px rgba(0,0,0,0.75);
-   -moz-box-shadow: 0px 0px 39px -4px rgba(0,0,0,0.75);
-   box-shadow: 0px 0px 39px -4px rgba(0,0,0,0.75);
-   
+#sizes:hover ~ #values{
+    color: #d55e5f
 }
-.aboutbox1{
-    color: #d55e5f;
-}
+
 #abouticon{
-    height: 30px;
-    width: 30px;
-    margin-left: 2em;
-    margin-right: 2em;
+    height: 2em;
+    width: 2em;
+    margin-left: 0.5em;
+    margin-right: 0.5em;
 }
 #values{
-    margin-left: 2em;
-    margin-right: 2em;
+    font-size: 0.9em;
+    margin-left: 0.5em;
+    margin-right: 0.5em;
     display: inline;
     text-align: center;
     color: white;
