--- a/css/style.css
+++ b/css/style.css
@@ -45,10 +45,7 @@ animation-direction: alternate;
 .gallery_all{
     margin: 0px 10px;
 }
-.gallery img:hover, .gallery1 img:hover{
-    animation-name: FadeInOut;
-    animation-duration: 0s;
-}
+
 #sizes{
     font-size: 0.9em;
     display: inline;
@@ -88,9 +85,7 @@ animation-direction: alternate;
     font-size: 0.8em;
     font-family: Helvetica Light;
 }
-h1:hover{
-    color: #d55e5f;
-}
+
 .subheading:hover{
     color: #d55e5f;
 }
@@ -122,9 +117,7 @@ h1:hover{
     width:100%;
     height:100%;
 }
-.header_index{
-    background-image: url('../img/home.png');
-}
+
 .header_about{
     background-image: url('../img/aboutpic.png');
 }
@@ -165,4 +158,97 @@ h1:hover{
 .contact {
     margin: 0 auto;
     width: 250px;
+}
+
+header{
+background: url(../img/home.png) no-repeat center center fixed; 
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+width: 100%;
+height: 400px;
+
+  
+
+}
+#headerH1{
+    text-align: center;
+    display: block;
+    
+    padding-top: 5em;
+    margin: 0 auto;
+}
+
+#headerHr{
+    width: 20%;
+}
+
+#headerH3{
+    text-align: center;
+    display: block;
+    margin: 0 auto;
+}
+footer{
+    background-color: #d55e5f;
+    position: relative;
+    height: 180px;
+    clear:both;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    padding-right: 50px;
+    padding-left: 50px;
+}
+
+.footerLi{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 45%;
+    float: left;
+}
+.fa{
+    margin: 0 auto;
+    margin-left: 20px;
+    
+}
+.aboutSection{
+    margin: 0 auto;
+    background-color: grey;
+    width: 30%;
+}
+.namesOfSizes{
+    width: 50%;
+    float: left;
+    background-color: #d55e5f;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 30px;
+    color: white;
+    text-align: right;
+
+}
+.actualSizes{
+    width: 50%;
+    float: right;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    background-color: grey;
+}
+.iconsDiv{
+    width: 10%;
+    margin: 0 auto;
+    background-color: white;
+}
+.iconDiv{
+    width: 20px;
+    height: 20px;
+    margin: 0 auto;
+
 }
