--- a/css/style.css
+++ b/css/style.css
@@ -271,16 +271,17 @@ iframe{
 
 .contactBlock{
     display: inline-block;
-    height: 200px;
-    width: 200px;
+    height: 150px;
+    width: 120px;
     background-color: #d55e5f;
     margin: 20px 20px 20px 20px;
+    overflow: scroll;
 
 }
 .icon{
-    width: 50%;
-    height: 50%;
-    margin: 20% 20% 20% 20%;
+    width: 50px;
+    height: 50px;
+    margin: 20px 20px 20px 20px;
 }
 .contactText{
     display: none;
