I think it's the final version
I cleaned code, changed some design

--- a/css/style.css
+++ b/css/style.css
@@ -180,10 +180,8 @@ footer{
 }
 .aboutSection{
     margin: 0 auto;
-    
     width: 30%;
 }
-
 
 .iconsDiv{
     width: 10%;
@@ -203,6 +201,7 @@ a{
 }
 
 .aboutImage{
+    margin-top: 40px;
     position: relative;
     height: 450px;
     width: 300px;
@@ -234,11 +233,12 @@ table{
 
 .emptyDiv{
     height: 200px;
-    width: 700px;
-    background-color: #d55e5f;
+    width: 140%;
+    border: 10px solid;
+    border-color: #d55e5f;
     display: block;
     position: relative;
-    top: 500px;
+    top: 270px;
     left: -100px;
 }
 
@@ -248,7 +248,9 @@ table{
 }
 
 .postWraper{
-    margin: 10px 20px 10px 20px;
+    margin: 20px 20px 20px 20px;
+
+    
 }
 .postText{
     margin: 10px 100px 10px 100px;
@@ -313,7 +315,27 @@ iframe{
     margin-left: 5px;
     margin-right: 5px;
 }
+
 a img:hover{
     opacity: 0.5;
 }
 
+#video{
+    display: block;
+    margin:  0 auto;
+}
+.formField{
+    padding: 5px 3px 5px 3px;
+
+}
+.formText{
+    display: none;
+}
+.aboutTable{
+    -webkit-box-shadow: 0px 0px 45px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 0px 45px 0px rgba(0,0,0,0.75);
+box-shadow: 0px 0px 45px 0px rgba(0,0,0,0.75);
+}
+.active{
+    background-color: #d55e5f !important;
+}
