--- a/css/style.css
+++ b/css/style.css
@@ -339,3 +339,8 @@ box-shadow: 0px 0px 45px 0px rgba(0,0,0,0.75);
 .active{
     background-color: #d55e5f !important;
 }
+.logoNav{
+    display: inline;
+    float: right;
+    margin: 4px 0 4px 10px;
+}
